# alpha-lens

./: .env.example  .gitignore  AGENTS_README.md  AGENT_ARCHITECTURE.md  ALPACA_POLYGON_SETUP.md  BACKLOG.md  CLAUDE.md  ENTERPRISE_ROADMAP.md  MANIFEST.in  MULTI_ASSET_ARCHITECTURE.md  PLANNING.md  PRODUCTION_FEATURES.md  PRODUCTION_READY.md  PROGRESS_SUMMARY.md  README.md  SESSION_SUMMARY.md  TASK.md  config.yaml  docker-compose.yml  example_usage.py  example_usage_lite.py  pyproject.toml  requirements-agents.txt  setup.py  setup.sh
.claude/: PROJECT_CONTEXT.md
.claude/commands/: execute-prp.md  generate-prp.md  validate.md
PRPs/templates/: prp_base.md
alphalens/agents/: __init__.py  backtesting.py  base.py  config.py  config_lite.py  execution.py  factor_discovery.py  market_regime.py  risk_management.py
alphalens/assets/: __init__.py  base.py  crypto.py  equity.py  future.py  option.py
alphalens/brokers/: __init__.py  alpaca_broker.py  base.py
alphalens/dashboard/: __init__.py  api.py  streamlit_app.py
alphalens/data/: __init__.py  alpaca_feed.py  base.py  polygon_feed.py  polygon_websocket.py  unified_data_manager.py  yahoo_feed.py
alphalens/learning/: __init__.py  reinforcement.py
alphalens/memory/: __init__.py  learning_memory.py  memory_store.py  state_manager.py  state_manager_lite.py
alphalens/ml/: __init__.py  automl.py  deep_learning.py  ensemble.py
alphalens/monitoring/: __init__.py  data_feed_monitor.py
alphalens/optimization/: __init__.py  mean_variance.py
alphalens/orchestrator/: __init__.py  orchestrator.py  state.py
alphalens/strategies/: __init__.py  options.py
examples/: alpaca_polygon_integration.py  monitoring_dashboard.py  strategy_examples.py  verify_setup.py
tests/integration/: test_data_feeds.py
